# prompt-asset-inventory

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: inventory-rules.json
examples/code/: prompts.py  toolSchema.js
examples/evals/: tool-schema.json
examples/prompts/: owned-by-default.md  risky.md  support-triage.md
src/prompt_asset_inventory/: __init__.py  cli.py  detect.py  inventory.py  models.py  report.py  rules.py
tests/: test_detect.py  test_report_cli.py  test_rules.py
