[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-asset-inventory"
version = "0.1.0"
description = "Offline inventory scanner for prompt assets in AI and developer tooling repositories."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "prompt-asset-inventory contributors" }]
keywords = ["ai", "developer-tools", "prompts", "inventory", "codex", "claude", "chatgpt", "cursor"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Text Processing",
]
dependencies = []

[project.scripts]
prompt-asset-inventory = "prompt_asset_inventory.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
